--- a/mypro2/GoodsDetailViewController.xib
+++ b/mypro2/GoodsDetailViewController.xib
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GoodsDetailViewController">
@@ -15,51 +19,99 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ssu-Ad-qAO">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ssu-Ad-qAO">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="343"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRI-SR-e5W">
-                    <rect key="frame" x="8" y="414" width="406" height="68"/>
+                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Es-bO-svd">
+                    <rect key="frame" x="0.0" y="411" width="320" height="1"/>
+                    <color key="backgroundColor" red="0.43623737369999999" green="0.40696429760000002" blue="0.39349789880000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="WF5-vJ-VQE"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jUW-yB-tKn">
+                    <rect key="frame" x="30" y="412" width="290" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="GzI-u1-1DP"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" red="0.99935752467105265" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4c6-fU-AwB">
+                    <rect key="frame" x="0.0" y="462" width="320" height="1"/>
+                    <color key="backgroundColor" red="0.4362373737373737" green="0.406964297609961" blue="0.39349789876323893" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="cNJ-lz-8C6"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品详情" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npB-G6-wwG">
+                    <rect key="frame" x="55" y="463" width="265" height="59"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="59" id="hg2-uR-6PE"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Kr-6G-UFm">
+                    <rect key="frame" x="0.0" y="522" width="320" height="1"/>
+                    <color key="backgroundColor" red="0.43623737369999999" green="0.40696429760000002" blue="0.39349789880000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="QgL-Di-yk9"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="无" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="isv-ml-wTa">
+                    <rect key="frame" x="0.0" y="523" width="320" height="45"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="VOt-U9-xYy"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRI-SR-e5W">
+                    <rect key="frame" x="0.0" y="343" width="320" height="68"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="68" id="4t0-kX-WOt"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jUW-yB-tKn">
-                    <rect key="frame" x="33" y="490" width="381" height="50"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <color key="textColor" red="0.99935752467105265" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4c6-fU-AwB">
-                    <rect key="frame" x="0.0" y="548" width="414" height="1"/>
-                    <color key="backgroundColor" red="0.4362373737373737" green="0.406964297609961" blue="0.39349789876323893" alpha="1" colorSpace="calibratedRGB"/>
-                </view>
-                <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Es-bO-svd">
-                    <rect key="frame" x="0.0" y="490" width="414" height="1"/>
-                    <color key="backgroundColor" red="0.43623737369999999" green="0.40696429760000002" blue="0.39349789880000002" alpha="1" colorSpace="calibratedRGB"/>
-                </view>
-                <view alpha="0.5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Kr-6G-UFm">
-                    <rect key="frame" x="0.0" y="605" width="414" height="1"/>
-                    <color key="backgroundColor" red="0.43623737369999999" green="0.40696429760000002" blue="0.39349789880000002" alpha="1" colorSpace="calibratedRGB"/>
-                </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="无" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="isv-ml-wTa">
-                    <rect key="frame" x="0.0" y="605" width="414" height="131"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="商品详情" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npB-G6-wwG">
-                    <rect key="frame" x="0.0" y="548" width="414" height="59"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="4c6-fU-AwB" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="4jv-4i-WLg"/>
+                <constraint firstAttribute="trailing" secondItem="npB-G6-wwG" secondAttribute="trailing" id="73L-SF-AMS"/>
+                <constraint firstItem="Ssu-Ad-qAO" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="8BC-0q-MU4"/>
+                <constraint firstItem="npB-G6-wwG" firstAttribute="top" secondItem="4c6-fU-AwB" secondAttribute="bottom" id="8MU-oM-BI9"/>
+                <constraint firstItem="jUW-yB-tKn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="A4a-Fg-MSm"/>
+                <constraint firstAttribute="trailing" secondItem="4c6-fU-AwB" secondAttribute="trailing" id="D5l-ca-tF5"/>
+                <constraint firstItem="Ssu-Ad-qAO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="IRt-Ht-QAn"/>
+                <constraint firstItem="gRI-SR-e5W" firstAttribute="top" secondItem="Ssu-Ad-qAO" secondAttribute="bottom" id="JAZ-A1-8Y2"/>
+                <constraint firstItem="5Es-bO-svd" firstAttribute="top" secondItem="gRI-SR-e5W" secondAttribute="bottom" id="Mnu-ur-PJA"/>
+                <constraint firstAttribute="trailing" secondItem="5Es-bO-svd" secondAttribute="trailing" id="OHd-6e-QhG"/>
+                <constraint firstItem="isv-ml-wTa" firstAttribute="top" secondItem="1Kr-6G-UFm" secondAttribute="bottom" id="R3F-e2-Cyn"/>
+                <constraint firstAttribute="bottom" secondItem="isv-ml-wTa" secondAttribute="bottom" id="Slu-iE-QK1"/>
+                <constraint firstAttribute="trailing" secondItem="Ssu-Ad-qAO" secondAttribute="trailing" id="TBZ-kL-yIy"/>
+                <constraint firstItem="npB-G6-wwG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="55" id="UZo-OF-AJP"/>
+                <constraint firstAttribute="trailing" secondItem="isv-ml-wTa" secondAttribute="trailing" id="eGc-Df-157"/>
+                <constraint firstAttribute="trailing" secondItem="jUW-yB-tKn" secondAttribute="trailing" id="eWb-ix-E8U"/>
+                <constraint firstAttribute="trailing" secondItem="1Kr-6G-UFm" secondAttribute="trailing" id="fQQ-mq-33v"/>
+                <constraint firstItem="1Kr-6G-UFm" firstAttribute="top" secondItem="npB-G6-wwG" secondAttribute="bottom" id="giG-O1-5rz"/>
+                <constraint firstItem="isv-ml-wTa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ieX-QP-3t4"/>
+                <constraint firstAttribute="trailing" secondItem="gRI-SR-e5W" secondAttribute="trailing" id="lHg-Tw-NiF"/>
+                <constraint firstItem="1Kr-6G-UFm" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="pli-Fk-KBh"/>
+                <constraint firstItem="5Es-bO-svd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="xe7-rh-rhq"/>
+                <constraint firstItem="jUW-yB-tKn" firstAttribute="top" secondItem="5Es-bO-svd" secondAttribute="bottom" id="z8y-SB-vx5"/>
+                <constraint firstItem="gRI-SR-e5W" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="zGB-D2-8Y8"/>
+                <constraint firstItem="4c6-fU-AwB" firstAttribute="top" secondItem="jUW-yB-tKn" secondAttribute="bottom" id="zN8-K6-Ymd"/>
+            </constraints>
+            <point key="canvasLocation" x="34" y="48"/>
         </view>
     </objects>
 </document>
